--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+obj/CartestConfig.old
+bin/expressInstall.swf
+*.xml
+*.js
+Cartest.as3proj
